<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:layout_toLeftOf="@+id/saveDetails"
        android:layout_toStartOf="@+id/saveDetails"
        android:text="BASIC INFORMATION"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edtFName"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@color/rectCustomer"
            android:textCursorDrawable="@color/buttonColor"
            android:ems="10"
            android:hint="@string/hintFName"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorGray"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="63dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edtLName"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_alignLeft="@+id/edtFName"
            android:layout_alignStart="@+id/edtFName"
            android:layout_below="@+id/edtFName"
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@color/rectCustomer"
            android:textCursorDrawable="@color/buttonColor"
            android:ems="10"
            android:hint="@string/hintLName"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorGray"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/edtFName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    <EditText
            android:id="@+id/edtNumber"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@color/rectCustomer"
            android:textCursorDrawable="@color/buttonColor"
            android:ems="10"
            android:hint="@string/hintNumber"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorGray"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtLName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_alignLeft="@+id/edtNumber"
            android:layout_alignStart="@+id/edtNumber"
            android:layout_below="@+id/edtNumber"
            android:backgroundTint="@color/colorGray"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@color/rectCustomer"
            android:textCursorDrawable="@color/buttonColor"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNumber"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/saveDetails"
        android:layout_width="318dp"
        android:layout_height="44dp"
        android:layout_below="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="savedetails"
        android:text="@string/btnSave"
        android:textColor="@color/iconColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

</android.support.constraint.ConstraintLayout>
