<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bw"
    tools:context="com.capstone.mobile.coach2.LoginActivity">

    <EditText
        android:id="@+id/stfEmail"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/promptemail"
        android:textColorHint="@color/colorGray"
        android:backgroundTint="@color/colorGray"
        android:textColor="@color/colorGray"
        android:textColorHighlight="@color/buttonColor"
        android:textCursorDrawable="@color/buttonColor"
        android:layout_marginTop="113dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/stfPassword"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/colorGray"
        android:backgroundTint="@color/colorGray"
        android:textColor="@color/colorGray"
        android:textColorHighlight="@color/buttonColor"
        android:textCursorDrawable="@color/buttonColor"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stfEmail" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:textColor="@color/iconColor"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/stfPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="login"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="104dp"
        app:srcCompat="@drawable/logo_long"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="47dp"
        app:layout_constraintHorizontal_bias="0.507"
        tools:layout_editor_absoluteY="56dp"
        tools:layout_editor_absoluteX="34dp" />

</android.support.constraint.ConstraintLayout>
